# gcg

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG  CMakeLists.txt  CMakePresets.json  INSTALL  Makefile  README  README.md  gcg-config.cmake.in  gcg.set  lcovrc  make.detectgithash  makedist.sh  out
check/: .gitignore  CMakeLists.txt  allcmpres-basis-aff.sh  allcmpres-basis.sh  allcmpres.sh  bindata1_complete.test  bindata1_n1.test  bindata1_n1s.test  bindata1_n2.test  bindata1_n3.solu  bindata1_n3.test  bindata1_n3s.solu  bindata1_n3s.test  bindata1_n4.test  bounds.awk  bounds_script.py  check-basis.awk  check.awk  check.sh  check_cluster.sh  check_cluster_cbc.sh  check_cluster_cplex.sh  check_cluster_dip.sh  check_decomp.sh  check_dip.awk  check_dip.sh  check_sepas.awk  cmake_wrapper.sh  cmpres-basis-aff.awk  cmpres-basis.awk  cmpres.awk  compareversions.sh  configuration_cluster.sh  configuration_logfiles.sh  configuration_set.sh  configuration_tmpfile_setup_gcg.sh  configuration_tmpfile_setup_gcg.sh.orig  cpmp.test  cpmp100.solu  cpmp100.test  (+57 more)
doc/: CMakeLists.txt  DOC_README  builddoc.sh  custom-gcg.css  custom.css  custom.js  docversions.html  gcg.bib  gcg.css  gcg.dxy  gcgfooter.html  gcgheader.html  gcgheader.html.in  gcglayout.xml  howto-primal-heuristics.c  index.html  index.html.in  main.md  release-notes.md  sandbox.md  scipoptsuiteheader.html.in  xternal.c
lib/: scip
lint/: co-gcc.h  co-gcc.lnt  co-gcc.mak  gcc-include-path.lnt  gcg-test.lnt  gcg.lnt
miplib2010-scripts/: .gitignore  Makefile  README  gcg.set  hmetis
release-notes/: release-notes-3.0.0  release-notes-3.0.2  release-notes-3.1.0
scripts/: check_existence_features_plots.py  check_existence_presolved.py  check_plugins.sh  check_scip_defs.sh  createBlockFiles.py  createdecs.sh  featuresPlots.py  featuresPlotsOverall.py  fix_gcg_code.sh  gcg_apache_license_header.txt  git_ci_cleanup.sh  presolveTestset.py  primalintegral.py  ref2block.sh  update_license_header.py  updatedates.sh
settings/: .gitignore  alldetectors.set  arrowhead.set  arrowheur-solvelp.set  base-eps-0999.set  base-eps-09999.set  base-eps-099999.set  base-genconv-min5.set  base-genconv-nostab-posslack-1.set  base-genconv-nostab-posslack-10.set  base-genconv-nostab-posslack-100.set  base-genconv-nostab.set  base-genconv-obj-round-redcostcuts.set  base-genconv-obj-round.set  base-genconv-obj.set  base-genconv-ppcuts-nostab.set  base-genconv-ppcuts.set  base-genconv-redcostcuts.set  base-genconv.set  base-it10-agg-convexification.set  base-it10-agg-noobjchg-convexification.set  base-it10-agg-ppcuts-noobjchg.set  base-origobj-obj-round-redcostcuts.set  base-origobj-ppcuts.set  base-origobj.set  base-ppcuts.set  base.set  basis-1-ext.set  basis-10-ext-ppobjconss-all.set  basis-10-ext-ppobjconss-latest.set  basis-10-ext-root.set  basis-10-ext.set  basis-100-ext.set  basis-132-ext.set  basis-16-ext.set  basis-2-ext.set  basis-32-ext.set  basis-4-ext.set  basis-64-ext.set  basis-8-ext-obj-round.set  (+249 more)
src/: .depend.gcglib.dbg.BASE.5220.dbg.swp  .depend.gcglib.dbg.swp  .gcgplugins.c.swp  .goutputstream-Y9XE6V  .heur_masterdiving.c.swp  .relax_gcg.c.swp  .stat.c.swp  CMakeLists.txt  benders_gcg.c  benders_gcg.h  bendersplugins.c  bendersplugins.h  bliss.cpp  bliss_C.c  bliss_C.h  bliss_automorph.cpp  bliss_automorph.h  bliss_automorph.hpp  branch_bpstrong.c  branch_bpstrong.h  branch_empty.c  branch_empty.h  branch_gcg.c  branch_gcg.h  branch_generic.c  branch_generic.h  branch_master.c  branch_master.h  branch_orig.c  branch_orig.h  branch_relpsprob.c  branch_relpsprob.h  branch_ryanfoster.c  branch_ryanfoster.h  branch_xyz.c  branch_xyz.h  class_colpool.cpp  class_colpool.h  class_consclassifier.cpp  class_consclassifier.h  (+468 more)
src/gcg/: automorph.cpp  automorph.h  automorph.hpp  benders_gcg.c  benders_gcg.h  bendersplugins.c  bendersplugins.h  bliss.cpp  bliss_automorph.cpp  bliss_automorph.h  bliss_automorph.hpp  branch_bpstrong.c  branch_bpstrong.h  branch_compbnd.c  branch_compbnd.h  branch_empty.c  branch_empty.h  branch_generic.c  branch_generic.h  branch_orig.c  branch_orig.h  branch_relpsprob.c  branch_relpsprob.h  branch_ryanfoster.c  branch_ryanfoster.h  branch_staticvar.c  branch_staticvar.h  branch_xyz.c  branch_xyz.h  branchgcg.c  branchgcg.h  class_conspartition.cpp  class_conspartition.h  class_detprobdata.cpp  class_detprobdata.h  class_indexpartition.cpp  class_indexpartition.h  class_partialdecomp.cpp  class_partialdecomp.h  class_pricingcontroller.cpp  (+389 more)
src/graph/: bipartitegraph.cpp  bipartitegraph.h  bipartitegraph_def.h  bridge.h  columngraph.cpp  columngraph.h  columngraph_def.h  graph.cpp  graph.h  graph_boost.cpp  graph_boost.h  graph_def.h  graph_gcg.cpp  graph_gcg.h  graph_interface.h  graph_tclique.cpp  graph_tclique.h  graphalgorithms.h  graphalgorithms_def.h  hypercolgraph.cpp  hypercolgraph.h  hypercolgraph_def.h  hypergraph.h  hypergraph_def.h  hyperrowcolgraph.cpp  hyperrowcolgraph.h  hyperrowcolgraph_def.h  hyperrowgraph.cpp  hyperrowgraph.h  hyperrowgraph_def.h  inst.cpp  matrixgraph.h  matrixgraph_def.h  priority_graph.h  rowgraph.cpp  rowgraph.h  rowgraph_def.h  rowgraph_weighted.h  rowgraph_weighted_def.h  weights.cpp  (+1 more)
src/symmetry/: automorph.cpp  automorph.hpp  automorphism.cpp  automorphism.h  automorphism.hpp  automorphism_bliss.cpp  automorphism_nauty.cpp  bliss.cpp  nauty.cpp  pub_automorphism.h  type_bliss.h  type_nauty.h
src/tests/: aggregation_test.cpp  bipartitegraph_test.cpp  colpool_test.cpp  columngraph_test.cpp  decomp_test.cpp  gcgcol_test.cpp  gcgvar_test.cpp  graphalgorithm_test.cpp  graphtest.cpp  graphtest.h  hypercolgraph_test.cpp  hyperrowcolgraph_test.cpp  hyperrowgraph_test.cpp  polish_test.cpp  rowgraph_test.cpp  rowgraph_weighted_test.cpp  statistic_test.cpp  test.cpp  test.h  weights_test.cpp
stats/: app.py  visu_notebook_v1.ipynb
tests/: aggregation_test.cpp  bipartitegraph_test.cpp  colpool_test.cpp  columngraph_test.cpp  decomp_test.cpp  gcgcol_test.cpp  gcgvar_test.cpp  graphalgorithm_test.cpp  graphtest.cpp  graphtest.h  hypercolgraph_test.cpp  polish_test.cpp  (+8 more)
(+2027 files in other folders)
